[package]
name = "tracing-app"
version = "0.1.0"
authors = ["austin brown <austinjbraun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tracingapp-server"
path = "src/server.rs"

[[bin]]
name = "tracingapp-client"
path = "src/client.rs"

[dependencies]
# normal things
ctrlc = "3.1.7"
prost = "0.6"
tonic = { version = "0.3", features = ["tls"] }
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
# tracing things
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }

[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }
