[package]
name = "tracing-app"
version = "0.1.0"
authors = ["austin brown <austinjbraun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
